# mail_app

./: .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  CLAUDE.md  README_plan.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
config/: app-identity.json
docs/: AI_FEATURES.md  APP_IDENTITY.md  COMPOSE.md  CROSS_CUTTING.md  CROSS_PLATFORM.md  DATABASE_SCHEMA.md  DATA_STORAGE.md  DEVELOPMENT_PLAN.md  FEATURE_SPEC.md  FILTERING.md  FLY_SEND.md  I18N.md  IMPORT_EXPORT.md  MAIL_SECURITY.md  ONBOARDING.md  POSITIONING.md  PROTECTED_REGIONS.md  README.md  RECIPIENT_AUTOCOMPLETE.md  SNS_INTEGRATION.md  SPAM.md  SYNC.md  THREADING.md  UI_UX_DESIGN.md
docs/prototypes/: fly-swallow.html  generate_frames.py  process_photo.py
scripts/: gen-placeholder-icon.mjs  sync-app-identity.mjs
spec/: README.md  protected-regions-v1.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs
src-tauri/src/services/: autoconfig.rs  compress.rs  datadir.rs  dedupe.rs  gcsv.rs  imap_sync.rs  media.rs  mod.rs  parser.rs  smtp.rs  vcard.rs
src-tauri/src/services/spam/: apply.rs  classifier.rs  mod.rs  tokenize.rs
src-tauri/src/services/store/: accounts.rs  contacts.rs  emails.rs  migrations.rs  mod.rs  recipients.rs  server_accounts.rs  settings.rs  signatures.rs  spam.rs  storage.rs  tags.rs
src-tauri/src/services/store/migrations/: 0001_init.sql  0002_account_username.sql  0003_servers.sql  0004_sync_state.sql  0005_signatures.sql  0006_attachments.sql  0006_tags.sql  0007_attachment_kind.sql  0008_body_compression.sql  0009_storage_limit.sql  0011_retention_tiers.sql  0011_spam.sql  0012_app_settings.sql  0012_fetch_all.sql  0013_contacts.sql  0015_contact_model.sql  0015_folders.sql  0016_contact_tags.sql  0017_contact_uid.sql
src-tauri/tests/: spam_corpus.rs
src/bindings/: .gitkeep  AccountInput.ts  AccountSummary.ts  AppInfo.ts  AttachmentSummary.ts  AutoconfigResult.ts  ContactAddress.ts  ContactAddressInput.ts  ContactGroupSummary.ts  ContactInput.ts  ContactSummary.ts  ContactValue.ts  ContactValueInput.ts  DataLocation.ts  DbInfo.ts  DuplicateGroup.ts  EvictionReport.ts  ImportReport.ts  MailDetail.ts  MailSummary.ts  RecipientSuggestion.ts  RetentionReport.ts  SendInput.ts  ServerAccountSummary.ts  SignatureSummary.ts  SpamSettings.ts  SpamVerdict.ts  StorageInfo.ts  SyncProgress.ts  SyncResult.ts  TagSummary.ts
src/renderer/: App.tsx  i18n.ts  index.css  index.html
src/renderer/components/: AccountSetup.tsx  AccountsOverview.tsx  BottomBar.tsx  Compose.tsx  ContactDuplicates.tsx  ContactValueEditor.tsx  ContactsView.tsx  ContextMenu.tsx  DateFilter.tsx  FlySwallow.tsx  FolderCombobox.tsx  Home.tsx  HtmlText.tsx  MailBody.tsx  MailList.tsx  MailView.tsx  MailboxView.tsx  RecipientInput.tsx  RecipientSuggestList.tsx  Settings.tsx  SignatureManager.tsx  StubView.tsx  TagFilter.tsx  TagManager.tsx  TagPicker.tsx  TitleBar.tsx
src/renderer/config/: prefs.ts
src/renderer/hooks/: useAutoSync.ts
src/renderer/locales/en/: common.json
src/renderer/locales/ja/: common.json
src/renderer/services/: accounts.ts  contacts.ts  data.ts  mail.ts  recipients.ts  signatures.ts  spam.ts  tags.ts
src/renderer/utils/: phone.ts  postal.ts  tagColors.ts
