[package]
name = "comfort-mail"
version = "0.1.0"
description = "Comfort Mail (仮称)"
authors = ["Tesaguri tech"]
license = "UNLICENSED"
edition = "2021"
rust-version = "1.80"

[lib]
name = "comfort_mail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri コア
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-log = "2"

# シリアライズ
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 型付きエラー
thiserror = "2"

# ログ
log = "0.4"

# Rust → TS 型生成（boundary 型を src/bindings/ に export）。詳細: docs/APP_IDENTITY.md / TS bindings
ts-rs = { version = "10", features = ["serde-compat", "no-serde-warnings"] }

# SQLite（FTS5 同梱）。SQLCipher 暗号化は後続でフィーチャ差し替え（docs/DATABASE_SCHEMA.md）
rusqlite = { version = "0.32", features = ["bundled"] }

# OS ネイティブ資格情報ストア（Win: Credential Manager / mac: Keychain / Linux: Secret Service）
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "crypto-rust",
] }

# IMAP 受信（同期）。TLS は native-tls（Win=SChannel / mac=SecureTransport → OpenSSL不要）
imap = "2"
native-tls = "0.2"

# MIME 解析（堅牢・純Rust）。docs/THREADING.md
mail-parser = "0.9"

# DNS（MX 解決でプロバイダ自動判定。docs/ONBOARDING.md）
hickory-resolver = "0.24"

# 日時（同期ウィンドウの SINCE 日付計算）
chrono = { version = "0.4", features = ["clock"] }

[dev-dependencies]
tempfile = "3"
